--- a/data/settings.json
+++ b/data/settings.json
@@ -1,4 +1,5 @@
 {
-    "music_volume": 0.00125,
-    "sfx_volume": 0.3425
+    "music_volume": 0.095,
+    "sfx_volume": 0.47,
+    "parallax_mod": 0.29375
 }
